[tool.poetry]
name = "bootcamp-web-scraping"
version = "0.1.0"
description = ""
authors = ["Eduardo Henrique <eduardo.hnsantos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pd = "^0.0.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
